<resources>
    <string name="app_name">Ultimate Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="first_time">firstTime</string>

    <!--Game notification message when ended -->
    <string name="youwon">You win!!</string>
    <string name="youlose">You Lose!!</string>
    <string name="gametied">Game tied!!</string>
    <string name="opponentquit">Opponent quit, you win!!</string>

    <!--Used by the game guide -->
    <string name="guideTitle">Game Guide</string>
    <string name="rulesFirstTitle">How to start multi player game?</string>
    <string name="firstItemFirstSection">1. On introduction screen click on \'New Game\'.</string>
    <string name="secondItemFirstSection">2. Click name of user to send a game invitation.</string>
    <string name="thirdItemFirstSection">3. After the opponent accepts your invitation just open the app and click \'Continue\' on the app\'s intro page, then select the opponents name to play!</string>
    <string name="rulesSecondTitle">How to play?</string>
    <string name="firstItemSecondSection">- This is like a normal tic tac toe game. The only difference is that you have to win a table composed of nine different small tables.</string>
    <string name="secondItemSecondSection">- If you initiated the game, the first move is yours and you can play in any table you want. Any subsequent move will dictate in what table the opponent can make a move.</string>
    <string name="thirdItemSecondSection">- You are only allow to play in tables highlighted with the same color as this text.</string>
    <string name="fourthItemSecondSection">- Every time you win a table. This table will be highlighted with the same color as this text.</string>
    <string name="fifthIemSecondSection">- Every time the opponent wins a table. This table will be highlighted with the same color as this text.</string>

    <!--GCM status and constants -->
    <string name="defaultsenderid">397978630462</string>
    <string name="tokenacquiredandSent">tokenSent</string>

    <!--Game progress constants -->
    <string name="gamerequest">Start Game Request</string>
    <string name="gamemove">Made Move</string>
    <string name="rejectgamerequest">Rejected Game Request</string>
    <string name="acceptgamerequest">Accept Game Request</string>
    <string name="gamestatus">gamestatus</string>
    <string name="mygcmtoken">mytoken</string>
    <string name="asyncbundleintent">asyncBundleIntent</string>
    <string name="asyncmessage">asyncmessage</string>
    <string name="asyncsendintent">send</string>
    <string name="asyncreceiveintent">receive</string>
    <string name="asyncphonenumber">phone</string>
    <string name="acceptbuttontext">Accept</string>
    <string name="declinebuttontext">Decline</string>


    <!--Game intro fragment text buttons -->

    <string name="newgame">New Game</string>
    <string name="continuegame">Continue</string>
    <string name="rules">Rules</string>
    <string name="invitations">Invitations</string>


    <!-- Firebase constants -->
    <string name="loadingtext">Registering with server, please wait..</string>
    <string name="firebasetokenkey">firebasetoken</string>
    <string name="firebaseurl">https://ultimatetictactoeapp.firebaseio.com/</string>
    <string name="tokenrequest">token request</string>
    <string name="registrationtime">Registration time</string>


</resources>
